# autostrategy

./: .env.example  .gitignore  CHANGELOG.md  README.md  SKILL.md  TODOS.md  package-lock.json  package.json  pyproject.toml
docs/superpowers/plans/: 2026-07-04-phase0-product-skeleton.md  2026-07-04-phase1-strategy-management.md  2026-07-04-phase2-design-agent.md  2026-07-04-phase4a-local-agent-service.md  2026-07-04-phase4b-ant-design-web-workflow.md  2026-07-06-phase5-paper-trading-plan.md
docs/superpowers/specs/: 2026-07-04-autostrategy-product-design.md  2026-07-05-phase4b-llm-setup-design.md  2026-07-06-phase5-paper-trading-design.md
examples/dynamic-grid-multi-market/: strategy.py
scripts/: env_setup.py  quality_check.py  run_backtest.py
src/autostrategy/: __init__.py  __main__.py  config.py
src/autostrategy/agents/: __init__.py  codegen_agent.py  design_agent.py
src/autostrategy/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py
src/autostrategy/cli/: __init__.py  main.py
src/autostrategy/core/: __init__.py  backtest_engine.py  paper_account.py  paper_feed.py  quality_check.py  strategy.py  template_registry.py  workspace.py
src/autostrategy/llm/: __init__.py  client.py
src/autostrategy/mcp/: __init__.py  server.py  tools.py
src/autostrategy/services/: __init__.py  artifact_service.py  backtest_job_service.py  backtest_service.py  codegen_service.py  (+6 more)
tests/integration/: test_api_artifacts.py  test_api_backtest.py  test_api_config.py  test_api_health.py  test_api_llm_config.py  test_api_paper_run.py  test_api_strategies.py  test_cli.py  test_cli_serve.py  test_codegen_agent.py  test_codegen_backtest_cli.py  test_dashboard_static.py  test_design_agent.py  test_design_cli.py  test_legacy_run_backtest.py  test_mcp_tools.py  test_strategy_cli.py
tests/unit/: test_backtest_engine.py  test_backtest_job_service.py  test_config.py  test_llm_client.py  test_paper_account.py  test_paper_feed.py  test_paper_run_job_service.py  test_paper_run_workflow.py  test_quality_check.py  test_services_backtest.py  test_services_design.py  test_services_strategy.py  test_strategy.py  test_template_registry.py  test_workspace.py  test_workspace_security.py
(+31 files in other folders)
